# SDFGen

./: CMakeLists.txt  main.cpp  makelevelset3.cpp  stl_reader.h  vec.h
